src/test/ui/borrowck/borrowck-and-init.stderr
error[E0381]: borrow of possibly-uninitialized variable: `i`
  --> $DIR/borrowck-and-init.rs:5:20
   |
LL |     println!("{}", i);
   |                    ^ use of possibly-uninitialized `i`
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
